# gst-plugins-cool

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  autogen.sh  configure.ac
config/lm15u/: gstcool.conf
config/m14tv/: gstcool.conf
config/mtka5lr/: gstcool.conf
config/rtks2b/: gstcool.conf
gst/: Makefile.am
gst-libs/gst/: Makefile.am
gst-libs/gst/cool/: Makefile.am  gstcool.c  gstcool.h  gstcoolplaybin.c  gstcoolplaybin.h  gstcoolrawcaps.h  gstcoolutil.c  gstcoolutil.h
gst/decproxy/: Makefile.am  gstadecproxy.c  gstadecproxy.h  gstdecproxy.c  gstdecproxy.h  gstdecproxy2.c  gstdecproxy2.h  gstfakeadec.c  gstfakevdec.c  gstfakevdec.h  gstmediainfo.c  gstmediainfo.h  gstvdecproxy.c  gstvdecproxy.h  plugin.c
gst/dynappsrc/: gstdynappsrc.c  gstdynappsrc.h
gst/fakedec/: Makefile.am  gstfakeadec.c  gstfakeadec.h  gstfakevdec.c  gstfakevdec.h  plugin.c
gst/httpextbin/: gsthttpextbin.c  gsthttpextbin.h
gst/reformatter/: Makefile.am  gstreformatter.c  gstreformatter.h  plugin.c
gst/streamiddemux/: Makefile.am  plugin.c
gst/textbin/: Makefile.am  gsttextbin.c  gsttextbin.h  plugin.c
gst/tsinkbin/: Makefile.am  gsttsinkbin.c  gsttsinkbin.h  plugin.c
m4/: gst-args-extention.m4
pkgconfig/: Makefile.am  gstreamer-cool-uninstalled.pc.in  gstreamer-cool.pc.in
scripts/registry/: gst-env.conf.in  gst-registry.conf.in
tests/check/: Makefile.am
tests/check/cool/: gstcool.c  gstcoolutil.c
tests/check/elements/: decproxy.c
tests/examples/: Makefile.am
tests/examples/dynappsrc/: Makefile.am  dynappsrc-stream.c
tests/examples/mediainfo/: Makefile.am  decodebin-mediainfo.c  playbin-mediainfo.c
tests/examples/rm/: Makefile.am  playbin-rm.c
tests/examples/textbin/: Makefile.am  playbin-subtitle.c
