bin_PROGRAMS = decodebin_mediainfo playbin_mediainfo

decodebin_mediainfo_SOURCES = decodebin-mediainfo.c
decodebin_mediainfo_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_BASE_CFLAGS) $(GST_CFLAGS)
decodebin_mediainfo_LDFLAGS = \
  $(GST_LIBS)

playbin_mediainfo_SOURCES = playbin-mediainfo.c
playbin_mediainfo_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_BASE_CFLAGS) $(GST_CFLAGS)
playbin_mediainfo_LDFLAGS = \
  $(GST_LIBS)
